--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,18 +7,24 @@
                      src="https://angular-academy.s3.amazonaws.com/main-logo/main-page-logo-small-hat.png">
             </a>
         </li>
+
+      <ng-container *ngIf="user$ | async as user">
+        <ng-container>
+
+        </ng-container>
         <li>
-            <a routerLink="/lessons">Lessons</a>
+          <a routerLink="/lessons">Lessons</a>
         </li>
         <li>
-            <a routerLink="/signup">Sign Up</a>
+          <a routerLink="/signup">Sign Up</a>
         </li>
         <li>
-            <a routerLink="/login">Login</a>
+          <a routerLink="/login">Login</a>
         </li>
         <li>
-            <a>Logout</a>
+          <a>Logout</a>
         </li>
+      </ng-container>
     </ul>
 
 </header>
