--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,24 +7,18 @@
                      src="https://angular-academy.s3.amazonaws.com/main-logo/main-page-logo-small-hat.png">
             </a>
         </li>
-
-      <ng-container *ngIf="user$ | async as user">
-        <ng-container>
-
-        </ng-container>
         <li>
           <a routerLink="/lessons">Lessons</a>
         </li>
-        <li>
+        <li *ngIf="isLoggedOut$ | async">
           <a routerLink="/signup">Sign Up</a>
         </li>
-        <li>
+        <li *ngIf="isLoggedOut$ | async">
           <a routerLink="/login">Login</a>
         </li>
-        <li>
+        <li *ngIf="isLoggedIn$ | async">
           <a>Logout</a>
         </li>
-      </ng-container>
     </ul>
 
 </header>
