--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,8 @@
+<div class="messages messages-error" *ngIf="error">
+  <div class="messages-container">
+    {{ error }}
+  </div>
+</div>
 <form autocomplete="off" novalidate [formGroup]="form">
 
     <fieldset>
