(Auth0) feat: How To Setup an Auth0 Hosted Login Page

--- a/src/app/lessons/lessons.component.html
+++ b/src/app/lessons/lessons.component.html
@@ -1,5 +1,4 @@
-<div *ngIf="isLoggedIn$ | async"
-     class="lessons-list-container v-h-center-block-parent">
+<div class="lessons-list-container v-h-center-block-parent">
 
   <h2>All Lessons</h2>
 
