--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,10 +11,10 @@
           <a routerLink="/lessons">Lessons</a>
         </li>
         <li *ngIf="isLoggedOut$ | async">
-          <a routerLink="/signup">Sign Up</a>
+          <a>Sign Up</a>
         </li>
         <li *ngIf="isLoggedOut$ | async">
-          <a routerLink="/login">Login</a>
+          <a (click)="login()">Login</a>
         </li>
         <li *ngIf="isLoggedIn$ | async">
           <a (click)="logout()">Logout</a>
