--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,14 +10,17 @@
         <li>
           <a routerLink="/lessons">Lessons</a>
         </li>
-        <li *ngIf="isLoggedOut$ | async">
-          <a (click)="signUp()">Sign Up</a>
+        <li>
+            <a routerLink="/admin">Admin</a>
         </li>
         <li *ngIf="isLoggedOut$ | async">
-          <a (click)="login()">Login</a>
+            <a routerLink="/signup">Sign Up</a>
         </li>
-        <li *ngIf="isLoggedIn$ | async">
-          <a (click)="logout()">Logout</a>
+        <li *ngIf="isLoggedOut$ | async">
+            <a routerLink="/login">Login</a>
+        </li>
+        <li *ngIf="isLoggedIn$ | async" (click)="logout()">
+            <a>Logout</a>
         </li>
     </ul>
 
@@ -30,6 +33,13 @@
         <h3>Angular Security MasterClass</h3>
         <img class="course-logo"
              src="https://s3-us-west-1.amazonaws.com/angular-university/course-images/angular-security-thumbnail.png">
+
+        <ng-container *ngIf="(user$ | async) as user">
+
+            <h4 class="user-email" *ngIf="user.email">{{user.email}}</h4>
+
+        </ng-container>
+
     </div>
 
 
